--- a/extension/html/browserActionPopup.html
+++ b/extension/html/browserActionPopup.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="/css/default.css" />
-		<script src="/scripts/jquery-2.0.0.min.js" type="text/javascript"></script>
+		<script src="/scripts/jquery-2.0.2.min.js" type="text/javascript"></script>
 		<script src="/scripts/commonFunctions.js" type="text/javascript"></script>
 		<script src="/scripts/browserActionPopupPage.js" type="text/javascript"></script>
 
@@ -29,6 +29,12 @@
 							<td><span class="tooltip" title="Data limit - Data used">Data remaining:</span></td>
 							<td id="dataRemaining">?? GB</td>
 						</tr>
+						
+						<tr class="offpeakData">
+							<td><span class="tooltip" title="Free data you've used that does not count towards your monthly cap">Off-peak data used:</span></td>
+							<td id="offpeakDataUsed">?? GB</td>
+						</tr>
+						
 						<tr class="estimates">
 							<td><span class="tooltip" title="Days elapsed &divide; Data used">Average daily usage:</span></td>
 							<td id="averageDailyUsage">?? GB</td>
